resources/assets/styles/components/_buttons.scss
.btn {
  @extend .text-white;
  @extend .font-weight-bold;
  @extend .w-100;

  display: inline-block;
  padding: 15px;
  background: theme-color("secondary");
  border-radius: 15px;

  &.alternative {
    @extend .text-secondary;

    background: theme-color("white");
  }
}

